# mcp-moviepy

./: .coverage  .gitignore  CUSTOM_FX.md  Dockerfile  GEMINI.md  README.md  benchmark_matrix.py  docker-compose.yml  gemini-extension.json  main.py  pyproject.toml  server.py  ui.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/core_video_tools_20260203/: index.md  plan.md  spec.md
conductor/tracks/core_video_tools_20260203/: metadata.json  plan.md
custom_fx/: __init__.py  matrix.py  rgb_sync.py  rotating_cube.py
data/: README.md
html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_modules/: index.html
html/developer_guide/: contribution_guidelines.html  developers_install.html  index.html  maintainers_publish.html
html/getting_started/: FAQ.html  docker.html  index.html  install.html  moviepy_10_minutes.html  quick_presentation.html  updating_to_v2.html
html/reference/: index.html
html/user_guide/: compositing.html  create_effects.html  index.html  loading.html  modifying.html  rendering.html
mcp_moviepy/tools/: video_generation.py
mcp_moviepy/utils/: doc_validation.py  file_utils.py
tests/: conftest.py  test_color_clip.py  test_concatenate.py  test_delete_clip.py  test_doc_validation.py  test_e2e.py  test_file_utils.py  test_get_clip.py  test_image_clip.py  test_list_clips.py  test_matrix.py  test_matrix_fx.py  test_matrix_seed.py  test_register_clip.py  test_rgb_sync_optimization.py  test_security.py  test_text_clip.py
(+232 files in other folders)
