[project]
name = "mcp-moviepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "moviepy[all]>=2.2.1",
    "numexpr>=2.14.1",
    "opencv-contrib-python>=4.13.0.90",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
